--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,8 +81,8 @@
 
     <Button
         android:id="@+id/createAcc_button"
-        android:layout_width="129dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="initializeSignup"
         android:text="@string/CreateAccount"
         app:layout_constraintBottom_toTopOf="@+id/login_bypass_switch"
