--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:onClick="log_out"
+                android:onClick="logOut"
                 android:text="@string/logout_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
