--- a/app/src/main/res/layout/activity_add_workout.xml
+++ b/app/src/main/res/layout/activity_add_workout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="deleteExercise"
     tools:context=".AddWorkout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -173,7 +174,7 @@
         android:layout_height="48dp"
         android:onClick="addWorkout"
         android:text="@string/submit_new_exercise"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sport_layout" />
@@ -252,6 +253,18 @@
         android:text="@string/no_time_set_label"
         app:layout_constraintStart_toStartOf="@+id/add_time_button"
         app:layout_constraintTop_toBottomOf="@+id/add_time_button" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="deleteExercise"
+        android:text="@string/delete_exercise"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_exercise_submit_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
