--- a/app/src/main/res/layout/fragment_exercise_workout_plans.xml
+++ b/app/src/main/res/layout/fragment_exercise_workout_plans.xml
@@ -62,6 +62,16 @@
             android:text="temp"
             android:textColor="@android:color/primary_text_dark" />
 
+        <TextView
+            android:id="@+id/exercise_plans_header_4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.18"
+            android:gravity="center"
+            android:tag="placeholder"
+            android:text="temp"
+            android:textColor="@android:color/primary_text_dark" />
+
     </TableRow>
 
     <ScrollView
