--- a/app/src/main/res/layout/activity_diet_plan.xml
+++ b/app/src/main/res/layout/activity_diet_plan.xml
@@ -1,9 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DietPlan">
+
+
+
+    <TableRow
+        android:id="@+id/exercise_plans_headers_row"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:weightSum="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exercise_plans_search_view">
+
+        <TextView
+            android:id="@+id/exercise_plans_header_1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.28"
+            android:drawableLeft="@android:drawable/arrow_down_float"
+            android:gravity="center"
+            android:tag="desc"
+            android:text="temp"
+            android:textColor="@android:color/primary_text_dark" />
+
+        <TextView
+            android:id="@+id/exercise_plans_header_2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.36"
+            android:gravity="center"
+            android:tag="placeholder"
+            android:text="temp"
+            android:textColor="@android:color/primary_text_dark" />
+
+        <TextView
+            android:id="@+id/exercise_plans_header_3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.18"
+            android:gravity="center"
+            android:tag="placeholder"
+            android:text="temp"
+            android:textColor="@android:color/primary_text_dark" />
+
+    </TableRow>
+
+    <ScrollView
+        android:id="@+id/exercise_plans_scroll_container"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exercise_plans_headers_row">
+
+        <LinearLayout
+            android:id="@+id/exercise_plans_row_container"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TableLayout
+                android:id="@+id/exercise_plans_main_table"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+            </TableLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
