--- a/app/src/main/res/layout/activity_diet_plan.xml
+++ b/app/src/main/res/layout/activity_diet_plan.xml
@@ -7,10 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".DietPlan">
 
+    <SearchView
+        android:id="@+id/diet_plan_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:iconifiedByDefault="true"
+        android:queryHint="Search based on description..."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 
     <TableRow
-        android:id="@+id/exercise_plans_headers_row"
+        android:id="@+id/diet_plan_headers_row"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
@@ -19,21 +31,22 @@
         android:weightSum="1.0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exercise_plans_search_view">
+        app:layout_constraintTop_toBottomOf="@id/diet_plan_search_view">
+
 
         <TextView
-            android:id="@+id/exercise_plans_header_1"
+            android:id="@+id/diet_header_time"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.28"
             android:drawableLeft="@android:drawable/arrow_down_float"
             android:gravity="center"
             android:tag="desc"
-            android:text="temp"
+            android:text="@string/exercise_log_header_time"
             android:textColor="@android:color/primary_text_dark" />
 
         <TextView
-            android:id="@+id/exercise_plans_header_2"
+            android:id="@+id/diet_plan_description"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.36"
@@ -43,39 +56,62 @@
             android:textColor="@android:color/primary_text_dark" />
 
         <TextView
-            android:id="@+id/exercise_plans_header_3"
+            android:id="@+id/diet_plan_num_servings"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.18"
             android:gravity="center"
             android:tag="placeholder"
-            android:text="temp"
+            android:text="@string/num_servings"
+            android:textColor="@android:color/primary_text_dark" />
+
+        <TextView
+            android:id="@+id/diet_plan_log_type"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.18"
+            android:gravity="center"
+            android:tag="placeholder"
+            android:text="@string/type"
             android:textColor="@android:color/primary_text_dark" />
 
     </TableRow>
 
     <ScrollView
-        android:id="@+id/exercise_plans_scroll_container"
+        android:id="@+id/diet_plan_scroll_container"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exercise_plans_headers_row">
+        app:layout_constraintTop_toBottomOf="@+id/diet_plan_headers_row">
 
         <LinearLayout
-            android:id="@+id/exercise_plans_row_container"
+            android:id="@+id/diet_plan_row_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TableLayout
-                android:id="@+id/exercise_plans_main_table"
+                android:id="@+id/diet_plan_main_table"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
             </TableLayout>
         </LinearLayout>
     </ScrollView>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_diet_plan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:tint="@android:color/primary_text_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteY="15dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
