--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D5CAD6</color>
-    <color name="colorPrimaryDark">#6B5E62</color>
-    <color name="colorAccent">#EFEFF0</color>
-    <color name="table_light1">#C9F0FF</color>
-    <color name="table_light2">#EAFFFD</color>
+    <color name="colorPrimary">#85A0AD</color>
+    <color name="colorPrimaryDark">#678998</color>
+    <color name="colorAccent">#AD9285</color>
+    <color name="table_light1">#d3e8f2</color>
+    <color name="table_light2">#b9dbeb</color>
     <color name="white">#ffffff</color>
 
+    <color name="UsercolorPrimary">#D5CAD6</color>
+    <color name="UsercolorPrimaryDark">#6B5E62</color>
+    <color name="UsercolorAccent">#EFEFF0</color>
 
-
-
+    <color name="ConsultantcolorPrimary">#329F5B</color>
+    <color name="ConsultantcolorPrimaryDark">#0C8346</color>
+    <color name="ConsultantcolorAccent">#8FD5A6</color>
 </resources>
